fix: Items not showing

--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ a {
 .statsbycountry {
   font-size: 15px;
   margin-bottom: 1%;
-  margin-left: 5%;
+  margin-left: 2%;
 }
 
 .App-map {
@@ -94,7 +94,7 @@ ul {
 .grid {
   display: grid;
   grid-template-columns: repeat(2, 50%);
-  grid-auto-rows: 190px;
+  grid-auto-rows: 210px;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -189,12 +189,13 @@ ul {
 
 .search {
   color: black;
-  margin-left: 9%;
+  margin-left: 8%;
   height: 25px;
-  width: 185px;
+  width:45%;
 }
 
 .middle {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
 }
